# py-scss

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
libs/: buffer.py  file.py  select.py
modules/: checkVariableFile.py  convertToRem.py  convertVariables.py  deleteLines.py  has_convert_to_rem.py  printTemp.py  removeComment.py  removeEmptyLines.py  scssHandler.py  sortLines.py
projects/: ag-accademia-4accordi.txt  ag-albergo-roma.txt  ag-aurora.txt  ag-begarda-lake.txt  ag-boccuccia-interni.txt  ag-cairepro.txt  ag-centro-diagnosi-auto.txt  ag-diellesped.txt  ag-dimensione-fiamma.txt  ag-emme-fer.txt  ag-farmacia-preceruti.txt  ag-mopro.txt  ag-r4.txt  ag-storie-della-terra.txt  ar-rawmantic.txt  ar-thermo.txt  ar-tt-carservice.txt  ar-zanini.txt  bridge.txt  bs-agricosta.txt  bs-area-51.txt  bs-as-service.txt  bs-autotrasporti-flli-soli.txt  bs-bcm-meccanica.txt  bs-borgoluce-2.txt  bs-braus-immobiliare.txt  bs-campeggio-chisonetto-globar.txt  bs-carlet-impresa-edile.txt  bs-cascina-spinerola.txt  bs-checcini-christian.txt  bs-circolo-tennis.txt  bs-clean-store.txt  bs-corazzin-bike.txt  bs-csm-servizi.txt  bs-dalmas.txt  bs-dr-petrillo.txt  bs-elleffe.txt  bs-erapra-veneto.txt  bs-ergon-tecnica.txt  bs-eti-srl.txt  (+50 more)
utils/: config.txt
